Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -409,6 +409,8 @@ Error message and password prompt
 
 <li>$:/state/tab--1190666861</li>
 
+<li>$:/state/tab--1498284803</li>
+
 <li>$:/state/tab--152518593</li>
 
 <li>$:/state/tab--1963855381</li>
@@ -418,6 +420,8 @@ Error message and password prompt
 <li>$:/state/tab--86143343</li>
 
 <li>$:/state/tab--959111941</li>
+
+<li>$:/state/tab-153977957</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -690,8 +694,6 @@ Error message and password prompt
 <li>Doves - Carousels</li>
 
 <li>From collector to creator</li>
-
-<li>New Tiddler</li>
 
 <li>TiddlyBlink</li>
 
@@ -12641,6 +12643,9 @@ html body.tc-body {
 <div created="20200618094158079" creator="debby" modified="20200618094206143" modifier="debby" title="$:/state/tab--1190666861">
 <pre>TiddlyBlink</pre>
 </div>
+<div created="20200924030324258" creator="debby" modified="20200924030337068" modifier="debby" title="$:/state/tab--1498284803">
+<pre>$:/core/ui/AdvancedSearch/Filter</pre>
+</div>
 <div created="20200618095532887" creator="debby" modified="20200722135218846" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
@@ -12655,6 +12660,9 @@ html body.tc-body {
 </div>
 <div created="20200527074400500" creator="debby" modified="20200728023100133" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
+</div>
+<div created="20200924030318496" creator="debby" modified="20200924030319144" modifier="debby" title="$:/state/tab-153977957">
+<pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
 </div>
 <div created="20200527074318200" creator="debby" modified="20200923033149270" modifier="debby" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
@@ -12677,7 +12685,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div list="Welcome! [[New Tiddler]]" title="$:/StoryList">
+<div created="20200924030320063" creator="debby" list="$:/AdvancedSearch Welcome!" modified="20200924030320063" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12692,7 +12700,7 @@ html body.tc-body {
 <div created="20200127144249151" list="$:/.giffmex/ViewToolbar/new-note-here $:/.giffmex/ViewToolbar/new-note-here-datetime $:/.giffmex/viewtoolbar/viewrefs $:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/close $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold" modified="20200304200401109" tags="tb" title="$:/tags/ViewToolbar">
 <pre></pre>
 </div>
-<div created="20200728015643215" creator="debby" modified="20200728015653818" modifier="debby" title="$:/temp/advancedsearch">
+<div created="20200728015643215" creator="debby" modified="20200924030325735" modifier="debby" title="$:/temp/advancedsearch">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13706,14 +13714,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618014537337" modified="20200618015654593" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>highlight</pre>
 </div>
-<div created="20200722081132988" creator="debby" modified="20200728034404282" modifier="debby" title="$:/temp/search">
+<div created="20200722081132988" creator="debby" modified="20200924030320062" modifier="debby" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200924024924068" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>.topicList</pre>
+<div created="20200618014049220" creator="debby" modified="20200924030221477" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Welcome!</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
@@ -14150,9 +14158,6 @@ Source: [How to Check if a File or Directory Exists in Python](https://linuxize.
 - **Create.** Write original article.
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
-</div>
-<div created="20200924030139207" creator="debby" modified="20200924030152987" modifier="debby" tags="" title="New Tiddler">
-<pre>[[Welcome!]]</pre>
 </div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
