--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     <link rel="/img/favicon.ico">
 
     
-    <title>給大眾的獨立搖滾之聲</title>
+    <title>The Past Is Yours, But the Future Is Mine</title>
     
 
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -54,7 +54,7 @@
 
             <!-- Main title -->
 
-            <a class="navbar-brand" href="/.">給大眾的獨立搖滾之聲</a>
+            <a class="navbar-brand" href="/.">The Past Is Yours, But the Future Is Mine</a>
         </div>
 
         <!-- Expanded navigation -->
